--- a/README
+++ b/README
@@ -3,7 +3,7 @@
 
 The files in this repository were used to configure the network depicted below.
 
-https://github.com/waleedkhider123/project1/tree/master/images-diagram
+[images-diagram](https://github.com/waleedkhider123/project1/tree/master/images-diagram)
 
 These files have been tested and used to generate a live ELK deployment on Azure. They can be used to either recreate the entire deployment pictured above. 
 Alternatively, select portions of the _playbook file may be used to install only certain pieces of it, such as Filebeat.
