--- a/README
+++ b/README
@@ -1,9 +1,8 @@
 # project1# project1## Automated ELK Stack Deployment
 
 
-The files in this repository were used to configure the network depicted below.
-
-[Your Link Here](https://github.com/waleedkhider123/project1/tree/master/images-diagram)
+The files in this repository were used to configure the network depicted below
+[Images-diagram](https://github.com/waleedkhider123/project1/tree/master/images-diagram)
  
 These files have been tested and used to generate a live ELK deployment on Azure. They can be used to either recreate the entire deployment pictured above. 
 Alternatively, select portions of the _playbook file may be used to install only certain pieces of it, such as Filebeat.
